--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Angad Kannaujiya
-logo: "/photo/ProfilePic.JPEG?raw=true"
+logo: "/Photo/ProfilePic.JPEG?raw=true"
 theme: jekyll-theme-minimal
