--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Angad Kannaujiya
-photo: "/Photos/ProfilePic.JPEG?raw=true"
+logo: "/Photos/ProfilePic.JPEG?raw=true"
 theme: jekyll-theme-minimal
