--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 title: Angad Kannaujiya
 profile_photo: images/profile.png
 theme: jekyll-theme-minimal
-email: angadk70@gmail.com
-linkedin: www.linkedin.com/in/angad-kannaujiya
-certifications:
-  - name: Data Analysis with R Programming
-    url: https://coursera.org/share/6b2349866ab69618aac243271128d4cd
+menu:
+  -  name: About
+     url:https://github.com/AngadKannaujiya/Data-Science-Portfolio/blob/main/about.md 
